<resources>
    <string name="app_name">Funny Vote</string>
    <string name="drawer_close">close</string>
    <string name="drawer_open">open</string>
    <string name="facebook_app_id" translatable="false">801910296651951</string>
    <string name="twitter_api_key" translatable="false">313e33f6d00449186693b8843745eb37e24df53f</string>
    <string name="twitter_api_id" translatable="false">13246251</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_my_box">My box</string>
    <string name="drawer_favorite">Favorite</string>
    <string name="drawer_create_new_vote">Create New Vote</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_account">Account</string>
    <string name="drawer_about">About</string>
    <string name="drawer_search">Search</string>
    <string name="main_page_tab_hot">Hot</string>
    <string name="main_page_tab_new">New</string>
    <string name="wall_item_vote_end">Vote END</string>
    <string name="wall_item_more">More...</string>
    <string name="wall_item_no_one_poll">No one poll</string>
    <string name="wall_item_bar_vote_count" formatted="false">Vote:%d </string>
    <string name="wall_item_bar_Share">Share</string>
    <string name="wall_item_no_vote_create_new">No vote in list.\nWould you create new vote?</string>
    <string name="wall_item_no_vote_create_new_other">No vote in list.\nNo question for this people.</string>
    <string name="wall_item_no_vote">No vote in list.</string>
    <string name="wall_item_no_vote_favorite">No vote in list.\nMaybe you have something interested.</string>
    <string name="wall_item_no_vote_participate">No vote in list.\nPlease go to help other.</string>
    <string name="wall_item_no_vote_search">No vote in list. \nPlease search on tool bar.</string>
    <string name="wall_item_no_vote_refresh">No vote in list.\nPlease refresh list.</string>
    <string name="wall_item_toast_no_vote_refresh">No vote after refresh</string>
    <string name="wall_item_toast_double_click_to_exit">Please click BACK again to exit</string>
    <string name="wall_item_other_option" formatted="false">"Other %d options..."</string>
    <string name="create_vote_title">Title</string>
    <string name="create_vote_title_hint">What is your vote?</string>
    <string name="create_vote_tab_options">Options</string>
    <string name="create_vote_tab_settings">Settings</string>
    <string name="create_vote_toolbar_title">New Vote</string>
    <string name="create_vote_tab_settings_options">Options</string>
    <string name="create_vote_tab_setting_max_options">Max :</string>
    <string name="create_vote_tab_setting_min_options">Min :</string>
    <string name="create_vote_tab_setting_user_add_option">Let poller add :</string>
    <string name="create_vote_tab_settings_author">Author</string>
    <string name="create_vote_tab_settings_anonymous">Anonymous</string>
    <string name="create_vote_tab_settings_name">Name:</string>
    <string name="create_vote_tab_settings_behavior">Behavior</string>
    <string name="create_vote_tab_settings_end_time">End time:</string>
    <string name="create_vote_tab_settings_security">Security:</string>
    <string name="create_vote_tab_settings_need_password">Need password:</string>
    <string name="create_vote_tab_settings_pre_result">View result before poll:</string>
    <string name="create_vote_tab_settings_password">Password:</string>
    <string name="create_vote_tab_settings_password_hint">Your password</string>
    <string name="create_vote_tab_settings_public">Public</string>
    <string name="create_vote_tab_settings_public_hint">Public:Vote show to all user.</string>
    <string name="create_vote_tab_settings_private">Private</string>
    <string name="create_vote_tab_settings_private_hint">Private:Vote only show to user that link to here.</string>
    <string name="create_vote_create_successful">Create vote successful.</string>
    <string name="create_vote_toast_less_than_2_option">Option number cant less than 2.</string>
    <string name="create_vote_toast_endtime_more_than_current">Vote end time should over now.</string>
    <string name="create_vote_toast_image_permission">"Cancelling, required permissions are not granted"</string>
    <string name="create_vote_toast_create_fail">"Network connect fail, Please check your network status"</string>
    <string name="create_vote_dialog_error_title">Error</string>
    <string name="create_vote_dialog_error_done">DONE</string>
    <string name="create_vote_error_hint_fill_all">Please fill all option content.</string>
    <string name="create_vote_error_hint_error_user_code">User register error, please check account page.</string>
    <string name="create_vote_error_hint_max_option_0">Max option cant be 0.</string>
    <string name="create_vote_error_hint_min_option_0">Min option cant be 0.</string>
    <string name="create_vote_error_hint_max_smaller_than_min">Max option number should more than min option number.</string>
    <string name="create_vote_error_hint_max_smaller_than_total">Max option number should smaller than option count.</string>
    <string name="create_vote_error_hint_title_empty">Vote title cant be empty.</string>
    <string name="create_vote_error_hint_password_empty">Vote password cant be empty.</string>
    <string name="create_vote_error_hint_endtime_more_than_now">Vote End time should over now.</string>
    <string name="create_vote_error_hint_endtime_more_than_max" formatted="false">Vote End max time is %d day.</string>
    <string name="create_vote_error_hint_title_duplicate">Vote title cant be duplicate.</string>
    <string name="create_vote_error_crop_image_title" translatable="false">Vote picture.</string>
    <string name="create_vote_option_hint">Please input option.</string>
    <string name="create_vote_dialog_exit_title">Are you sure to exit?</string>
    <string name="create_vote_dialog_exit_message">Dont you create vote complete?</string>
    <string name="create_vote_dialog_exit_button_leave">Leave</string>
    <string name="create_vote_dialog_exit_button_keep">Keep</string>
    <string name="vote_detail_toast_option_choice_hint" formatted="false">"Multi option:\nPlease choice %d - %d votes."</string>
    <string name="vote_detail_toast_option_over_max" formatted="false">"Over the max option:%d votes."</string>
    <string name="vote_detail_toast_option_at_least_min" formatted="false">"Please choice at least :%d votes."</string>
    <string name="vote_detail_toast_add_favorite">"Add to favorite"</string>
    <string name="vote_detail_toast_remove_favorite">"Remove favorite"</string>
    <string name="vote_detail_toast_fill_new_option">Please fill and update all new option\'s content</string>
    <string name="vote_detail_toast_confirm_new_option">Please confirm the no update option before</string>
    <string name="vote_detail_toast_vote_end_not_poll">Vote END. Take care next time.</string>
    <string name="vote_detail_toast_vote_end_polled">Vote END. Let\'s check the result.</string>
    <string name="vote_detail_circle_loading" formatted="false">"Loading"</string>
    <string name="vote_detail_circle_updating" formatted="false">"Updating"</string>
    <string name="vote_detail_title">Detail</string>
    <string name="vote_detail_menu_share">Share</string>
    <string name="vote_detail_menu_submit">Submit</string>
    <string name="vote_detail_menu_info">Information</string>
    <string name="vote_detail_menu_search_hint">Search Options</string>
    <string name="vote_share_vote_via">Share this vote via</string>
    <string name="vote_share_app_via">Share Funny vote via</string>
    <string name="vote_share_msg" formatted="false">Please help to vote this\n\n『%s』\n\n%s</string>
    <string name="vote_share_more">More</string>
    <string name="vote_share_copy_url">Copy Link</string>
    <string name="vote_share_copied_msg">Link Copied</string>
    <string name="vote_detail_fab_top">Top</string>
    <string name="vote_detail_fab_sort_option">Sort option</string>
    <string name="vote_detail_fab_pre_result">Preview result</string>
    <string name="vote_detail_fab_return_poll">Return to poll</string>
    <string name="vote_share_to_other_app_default_message" formatted="false">A question I need your help: %s</string>
    <string name="vote_detail_dialog_title_info">Information</string>
    <string name="vote_detail_dialog_option">Option</string>
    <string name="vote_detail_dialog_done">Done</string>
    <string name="vote_detail_dialog_time">Time</string>
    <string name="vote_detail_dialog_security">Security</string>
    <string name="vote_detail_dialog_single_option">Single option</string>
    <string name="vote_detail_dialog_multi_option" formatted="false">"Multi option:\nPlease choice %d - %d votes"</string>
    <string name="vote_detail_dialog_can_add_option">User can add new option</string>
    <string name="vote_detail_dialog_can_not_add_option">User can not add new option</string>
    <string name="vote_detail_dialog_sort_option">Sort Option By:</string>
    <string name="vote_detail_dialog_sort_default">Default</string>
    <string name="vote_detail_dialog_sort_alphabet">Alphabet</string>
    <string name="vote_detail_dialog_sort_poll">Poll count</string>
    <string name="vote_detail_dialog_sort_select">Select</string>
    <string name="vote_detail_case_view_close">Close</string>
    <string name="vote_detail_case_view_title">Please submit options</string>
    <string name="vote_detail_case_view_content">After choice options , submit result.</string>
    <string name="vote_detail_dialog_exit_title">Are you sure to exit?</string>
    <string name="vote_detail_dialog_exit_message">Dont you poll the vote?</string>
    <string name="vote_detail_dialog_exit_button_leave">Leave</string>
    <string name="vote_detail_dialog_exit_button_keep">Keep</string>
    <string name="vote_detail_dialog_password_hint">Input password</string>
    <string name="vote_detail_dialog_password_title">Please enter password to continue</string>
    <string name="vote_detail_dialog_password_toast_retry">Incorrect. Please retry password</string>
    <string name="vote_detail_dialog_password_input">Input</string>
    <string name="account_fb_log_in">Facebook Log In</string>
    <string name="account_google_log_in">Google Log In</string>
    <string name="account_twitter_log_in">Twitter Log In</string>
    <string name="account_log_out">Log out</string>
    <string name="account_default_name">Village people 9527</string>
    <string name="account_dialog_new_name_title">Enter new name</string>
    <string name="account_dialog_ok" translatable="false">OK</string>
    <string name="account_dialog_cancel">Cancel</string>
    <string name="account_dialog_no" translatable="false">No</string>
    <string name="account_toast_login_fail">Login fail, maybe be try other login account.</string>
    <string name="merge_option_title">Keep your data</string>
    <string name="merge_option_msg">Would you like to merge your voting record to login user?(If you choose no, you will lose your record)</string>
    <string name="personal_tab_create">CREATE</string>
    <string name="about_author_information">Author Information</string>
    <string name="about_author_desc">你是真的想看開發團隊喔？真閒</string>
    <string name="about_author_info_heaton" translatable="false">Heaton</string>
    <string name="about_author_desc_heaton">基本上除了後端碰比較少，剩下 PM,APP RD,UI,QA,文案 全部都搞，真是搞死人,有沒有人可以幫個忙啊</string>
    <string name="about_author_info_eason" translatable="false">Eason</string>
    <string name="about_author_desc_eason">宿霧爽</string>
    <string name="about_author_info_jim" translatable="false">Jim</string>
    <string name="about_author_desc_jim">負責後端的現充，想要靠 funny vote 賺錢，直到看到報表</string>
    <string name="about_author_info_nick" translatable="false">Nick</string>
    <string name="about_author_desc_nick">文案主要擔當，但是一直拖稿</string>
</resources>