<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mainToolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/color_primary"
        android:minHeight="40dp"
        android:titleTextColor="@color/md_blue_50" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                app:contentPaddingBottom="8dp"
                app:contentPaddingLeft="8dp"
                app:contentPaddingRight="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextComponent.ItemRow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_author_information"
                        android:textAppearance="@style/TextAppearance.Header" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="6dp"
                        android:text="@string/about_author_desc" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                app:contentPaddingBottom="8dp"
                app:contentPaddingLeft="8dp"
                app:contentPaddingRight="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextComponent.ItemRow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_author_info_heaton"
                        android:textAppearance="@style/TextAppearance.Header" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="6dp"
                        android:text="@string/about_author_desc_heaton" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                app:contentPaddingBottom="8dp"
                app:contentPaddingLeft="8dp"
                app:contentPaddingRight="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextComponent.ItemRow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_author_info_jim"
                        android:textAppearance="@style/TextAppearance.Header" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="6dp"
                        android:text="@string/about_author_desc_jim" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                app:contentPaddingBottom="8dp"
                app:contentPaddingLeft="8dp"
                app:contentPaddingRight="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextComponent.ItemRow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_author_info_eason"
                        android:textAppearance="@style/TextAppearance.Header" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="6dp"
                        android:text="@string/about_author_desc_eason" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                app:contentPaddingBottom="8dp"
                app:contentPaddingLeft="8dp"
                app:contentPaddingRight="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextComponent.ItemRow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_author_info_nick"
                        android:textAppearance="@style/TextAppearance.Header" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="6dp"
                        android:text="@string/about_author_desc_nick" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>